fixed scrollbar, updated contact location, english language by default

--- a/style.css
+++ b/style.css
@@ -112,21 +112,21 @@ p {
 ::-webkit-scrollbar {
   width: 11px;
   /* margin-bottom: var(--header-height); */
-  margin-bottom: calc(var(--header-height) + var(--footer-height));
+  /* margin-bottom: calc(var(--header-height) + var(--footer-height)); */
 }
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   /* box-shadow: inset 0 0 5px var(--first-color); */
   border-radius: 10px;
   /* margin-bottom: var(--header-height); */
-  margin-bottom: calc(var(--header-height) + var(--footer-height));
+  /* margin-bottom: calc(var(--header-height) + var(--footer-height)); */
 }
 ::-webkit-scrollbar-thumb {
   /* background: var(--gray-color); */
   background: var(--first-alpha-color);
   border-radius: 10px;
   /* margin-bottom: var(--header-height); */
-  margin-bottom: calc(var(--header-height) + var(--footer-height));
+  /* margin-bottom: calc(var(--header-height) + var(--footer-height)); */
 }
 
 /* *************** Carousel *************** */
@@ -1537,22 +1537,22 @@ height: fit-content;
 
   ::-webkit-scrollbar {
     /* width: 11px; */
-    margin-top: var(--header-height);
-    margin-bottom: var(--footer-height);
+    /* margin-top: var(--header-height);
+    margin-bottom: var(--footer-height); */
   }
   ::-webkit-scrollbar-track {
     /* box-shadow: inset 0 0 5px grey; */
     /* box-shadow: inset 0 0 5px var(--first-color); */
     /* border-radius: 10px; */
-    margin-top: var(--header-height);
-    margin-bottom: var(--footer-height);
+    /* margin-top: var(--header-height);
+    margin-bottom: var(--footer-height); */
   }
   ::-webkit-scrollbar-thumb {
     /* background: var(--gray-color); */
     /* background: var(--first-alpha-color); */
     /* border-radius: 10px; */
-    margin-top: var(--header-height);
-    margin-bottom: var(--footer-height);
+    /* margin-top: var(--header-height);
+    margin-bottom: var(--footer-height); */
   }
 
   .modal-content {
